<resources>
    <string name="app_name">学融宝</string>
    <string name="action_settings">Settings</string>
    <string name="moudle_home">首页</string>
    <string name="moudle_personal">个人</string>
    <string name="moudle_more">更多</string>
    <string name="phone_num">手机号</string>
    <string name="phone_num_hint">请输入手机号</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_hint_2">6-16位数字、字母或符号</string>
    <string name="forget_password">忘记密码</string>
    <string name="next_step">下一步</string>
    <string name="name">姓名</string>
    <string name="name_hint">请输入姓名</string>
    <string name="sex">性别</string>
    <string name="sex_hint">请输入性别</string>
    <string name="birthday">生日</string>
    <string name="birthday_hint">请输入出生日期</string>
    <string name="id_number">身份证号</string>
    <string name="id_photo">身份证照片</string>
    <string name="hometown">籍贯</string>
    <string name="upload_pic">上传照片</string>
    <string name="find_password">找回密码</string>
    <string name="change_password">修改密码</string>
    <string name="school">学校</string>
    <string name="school_hint">输入就读学校名称</string>
    <string name="college">学院</string>
    <string name="college_hint">请输入学院名称</string>
    <string name="major">专业</string>
    <string name="major_hint">请输入专业名称</string>
    <string name="degree">学历</string>
    <string name="degree_hint">请输入学历信息</string>
    <string name="enrollment">入学时间</string>
    <string name="enrollment_hint">请输入入学时间</string>
    <string name="student_num">学号</string>
    <string name="student_num_hint">请输入学号信息</string>
    <string name="student_id_photo">学生证照片</string>
    <string name="one_card_photo">一卡通照片</string>
    <string name="wechat">微信</string>
    <string name="wechat_hint">请写微信账号</string>
    <string name="qq">QQ</string>
    <string name="qq_hint">请写QQ账号</string>
    <string name="weibo">微博</string>
    <string name="weibo_hint">请写微博账号</string>
    <string name="mail">邮箱</string>
    <string name="mail_hint">请输入邮箱</string>
    <string name="vcode">验证码</string>
    <string name="vcode_hint">请输入验证码</string>
    <string name="get_vcode">获取验证码</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_confirm_hint">请确认密码</string>
    <string name="invitation_code">邀请码</string>
    <string name="invitation_code_hint">请输入邀请码（选填）</string>
    <string name="id_number_hint">请输入身份证号</string>
    <string name="hometown_hint">请输入籍贯</string>
    <string name="id_regex">^((1[1-5])|(2[1-3])|(3[1-7])|(4[1-6])|(5[0-4])|(6[1-5])|71|(8[12])|91)\\d{4}((19\\d{2}(0[13-9]|1[012])(0[1-9]|[12]\\d|30))|(19\\d{2}(0[13578]|1[02])31)|(19\\d{2}02(0[1-9]|1\\d|2[0-8]))|(19([13579][26]|[2468][048]|0[48])0229))\\d{3}(\\d|X|x)?$</string>
    <string name="phone_num_regex">1[3|5|7|8|][0-9]{9}</string>
    <string name="phone_post_key">phone</string>
    <string name="vcode_post_key">vcode</string>
    <string name="password_post_key">passwd</string>
    <string name="invitation_post_key">invite</string>
    <string name="name_post_key">name</string>
    <string name="id_number_post_key">pID</string>
    <string name="school_post_key">university</string>
    <string name="college_post_key">college</string>
    <string name="major_post_key">major</string>
    <string name="student_num_post_key">sID</string>
    <string name="quick_borrow">快速借款</string>
    <string name="credit_ceiling">信用额度</string>
    <string name="my_credit">我的额度</string>
    <string name="fill_info_remind">完善资料可以相应提升信用额度</string>
    <string name="credit">信用</string>
    <string name="credit_base">基本信息</string>
    <string name="birthday_post_key">birthday</string>
    <string name="account_address_hint">x省x市(县)x区x乡(镇)</string>
    <string name="account_address">户口所在地</string>
    <string name="account_address_post_key">place</string>
    <string name="info_remind">注：填写全部必填信息才能点亮图标\n手机号码我们不会主动拨打，仅作为紧急联系使用</string>
    <string name="degree_post_key">education</string>
    <string name="enrollment_post_key">enrollment</string>
    <string name="collage_class">班级</string>
    <string name="collage_class_hint">请输入班级</string>
    <string name="collage_class_post_key">grade</string>
    <string name="dorm">寝室地址</string>
    <string name="dorm_hint">请输入寝室地址</string>
    <string name="dorm_hint_2">请具体到x栋x号房间</string>
    <string name="dorm_post_key">dorm</string>
    <string name="xxw_photo">学信网</string>
    <string name="xxw_remind">点击这里查看如何获取学信网信息截图</string>
    <string name="mail_post_key">mail</string>
    <string name="wechat_post_key">weixin</string>
    <string name="qq_post_key">qq</string>
    <string name="weibo_post_key">weibo</string>
    <string name="family_info">家庭资料</string>
    <string name="father_name_hint">请输入父亲姓名</string>
    <string name="father_name">父亲姓名</string>
    <string name="father_name_post_key">faName</string>
    <string name="father_phone_post_key">faPhone</string>
    <string name="father_phone">父亲手机</string>
    <string name="father_phone_hint">请输入父亲手机</string>
    <string name="mother_name">母亲姓名</string>
    <string name="mother_name_hint">请输入母亲姓名</string>
    <string name="mother_name_post_key">moName</string>
    <string name="mother_phone_post_key">moPhone</string>
    <string name="mother_phone">母亲手机</string>
    <string name="mother_phone_hint">请输入母亲手机</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="contact_info">联系资料</string>
    <string name="father_info">父亲信息：</string>
    <string name="company">工作单位</string>
    <string name="company_hint">请输入工作单位</string>
    <string name="father_company_post_key">faCompany</string>
    <string name="company_address">单位地址</string>
    <string name="company_address_hint">请输入单位地址</string>
    <string name="company_address_hint_2">请具体到x街x号</string>
    <string name="father_company_address_post_key">faCompanyAddr</string>
    <string name="father_duty_post_key">faDuty</string>
    <string name="duty">职务</string>
    <string name="duty_hint">请输入职务</string>
    <string name="mother_info">母亲信息：</string>
    <string name="mother_company_post_key">moCompany</string>
    <string name="mother_company_address_post_key">moCompanyAddr</string>
    <string name="mother_duty_post_key">moDuty</string>
    <string name="home_address">家庭住址</string>
    <string name="home_address_post_key">homeAddr</string>
    <string name="home_address_hint">请输入家庭住址</string>
    <string name="home_address_hint_2">请具体到x路x街x小区名x房间</string>
    <string name="mate1_info">联系人同学一：</string>
    <string name="mate1_name_post_key">caName</string>
    <string name="sex_post_key">sex</string>
    <string name="mate1_sex_post_key">caSex</string>
    <string name="mate1_phone_post_key">caPhone</string>
    <string name="mate1_dorm_post_key">caDormAddr</string>
    <string name="mate2_info">联系人同学二：</string>
    <string name="mate2_name_post_key">cbName</string>
    <string name="mate2_sex_post_key">cbSex</string>
    <string name="mate2_phone_post_key">cbPhone</string>
    <string name="mate2_dorm_post_key">cbDormAddr</string>
    <string name="other_info">补充信息：</string>
    <string name="hold_id_photo">手持身份证照片</string>
    <string name="admission_photo">录取通知书</string>
    <string name="admission_hint">大一新生必填</string>
    <string name="done">完成</string>
    <string name="mobile_telecom_carrier">手机信息运营商网站截图</string>
    <string name="teacher1_info">联系人老师一：</string>
    <string name="teacher1_name_post_key">taName</string>
    <string name="teacher1_sex_post_key">taSex</string>
    <string name="teacher1_phone_post_key">taPhone</string>
    <string name="teacher1_duty_post_key">taDuty</string>
    <string name="teacher2_info">联系人老师二：</string>
    <string name="teacher2_name_post_key">tbName</string>
    <string name="teacher2_sex_post_key">tbSex</string>
    <string name="teacher2_phone_post_key">tbPhone</string>
    <string name="teacher2_duty_post_key">tbDuty</string>
    <string name="bank_info">近6个月银行流水</string>
    <string name="other_info_title">其它资料</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="bind_bank_card">绑定银行卡</string>
    <string name="my_gold_coin">我的金币</string>
    <string name="my_message">我的消息</string>
    <string name="history">历史记录</string>
    <string name="invite_friend">邀请好友</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="contact_us">联系客服</string>
    <string name="update_version">版本更新</string>
    <string name="clear_cache">清理缓存</string>
    <string name="green_hand">新手指南</string>
    <string name="help">使用帮助</string>
    <string name="xxw_post_key">authenPic</string>
    <string name="personal_info">个人资料</string>
    <string name="account">账号</string>
    <string name="amount">额度</string>
    <string name="quota">额度</string>
    <string name="beans">信用豆</string>
    <string name="quotatotal">总额度</string>
    <string name="ge_pass">手势密码</string>
    <string name="change_pass">修改密码</string>
    <string name="change_ge_pass">修改手势密码</string>
    <string name="logout">退出当前账号</string>
    <string name="portrait">头像</string>
    <string name="j_pickerview_cancel">取消</string>
    <string name="j_pickerview_submit">确定</string>
    <string name="input_gesture_password">绘制手势密码</string>
    <string name="borrow_amount">借款金额（元）</string>
    <string name="borrow_time">借款期限</string>
    <string name="borrow_now">马上借款</string>
    <string name="borrow_remind1">产品及借款费用说明</string>
    <string name="borrow_remind2">逾期费用说明</string>
    <string name="borrow_fuli">福利贷</string>
    <string name="borrow_huoli">活利贷</string>
    <string name="borrow_yueli">月利贷</string>
    <string name="borrow">贷款</string>
    <string name="borrow_plain">计划还款</string>
    <string name="caculate_title">费率计算</string>
    <string name="borrow_apply">贷款申请</string>
    <string name="borrow_amount_label">借款金额</string>
    <string name="borrow_unit_label">元</string>
    <string name="borrow_time_label">借款时间</string>
    <string name="borrow_consult_label">咨询服务费</string>
    <string name="borrow_bond_label">无逾期保证金</string>
    <string name="borrow_receive_label">到账金额</string>
    <string name="borrow_return_label">还款金额</string>
    <string name="borrow_use">借款用途</string>
    <string name="borrow_use_hint">请输入借款用途</string>
    <string name="borrow_use_key">usage</string>
    <string name="borrow_return_key">source</string>
    <string name="borrow_return">还款来源</string>
    <string name="borrow_return_hint">请输入还款来源</string>
    <string name="agree">同意</string>
    <string name="agreement">协议</string>
    <string name="repayment_contract">《借款合同》</string>
    <string name="repayment_contract_2">《合同》</string>
    <string name="bind_bank_card_num">银行卡号</string>
    <string name="bind_bank_card_num_hint">仅支持储蓄卡</string>
    <string name="bind_bank_card_num_post_key">bankCard</string>
    <string name="bind_bank__hint">请选择</string>
    <string name="bind_bank">银行</string>
    <string name="bind_bank_post_key">bank</string>
    <string name="bind_bank_name">开户行</string>
    <string name="bind_bank_name_hint">例如xx支行</string>
    <string name="bind_bank_name_post_key">bankBranch</string>
    <string name="consignee">收货人</string>
    <string name="consignee_hint">请输入收货人姓名</string>
    <string name="consignee_post_key">name</string>
    <string name="addr_post_key">addr</string>
    <string name="addr">收货地址</string>
    <string name="addr_hint">请输入收货地址</string>
    <string name="add_new_addr">添加新地址</string>
    <string name="password_post_old_key">oldpasswd</string>
    <string name="password_post_new_key">newpasswd</string>
    <string name="password_old">原密码</string>
    <string name="password_old_hint">请输入原密码</string>
    <string name="password_new">新密码</string>
    <string name="password_new_hint">请输入新密码</string>
    <string name="password_new_2">确认新密码</string>
    <string name="password_new_2_hint">请重新输入新密码</string>
    <string name="bind_remind">注：请绑定本人的银行卡</string>
</resources>