<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.wazxb.xuerongbao.storage.data.UserBaseData" />


        <variable
            name="handler"
            type="com.wazxb.xuerongbao.moudles.personal.BindCradActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@color/view_default_bg_grey"
        android:orientation="vertical">

        <com.zxzx74147.devlib.widget.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gap_110"
            app:text="@string/bind_bank_card" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap_10"
            android:layout_marginLeft="@dimen/default_gap_10"
            android:layout_marginTop="@dimen/default_gap_10"
            android:text="@string/bind_remind"
            android:textColor="@color/button_bg_red"
            android:textSize="@dimen/default_size_20" />
        <com.wazxb.xuerongbao.widget.InputTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_input_layout"
            android:layout_marginLeft="@dimen/default_gap_20"
            android:layout_marginRight="@dimen/default_gap_20"
            android:inputType="number"
            android:layout_marginTop="@dimen/default_gap_10"
            app:edit_hint="@string/bind_bank_card_num_hint"
            app:label_text="@string/bind_bank_card_num"
            app:not_null="true"
            app:post_key="@string/bind_bank_card_num_post_key" />

        <com.wazxb.xuerongbao.widget.InputTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_input_layout"
            android:layout_marginLeft="@dimen/default_gap_20"
            android:layout_marginRight="@dimen/default_gap_20"
            android:layout_marginTop="@dimen/default_gap_10"
            app:edit_hint="@string/bind_bank__hint"
            app:input_right_drawable="@drawable/user_gray_right_arrow"
            app:label_text="@string/bind_bank"
            app:not_null="true"
            app:pick_type="bank"
            app:post_key="@string/bind_bank_post_key" />

        <com.wazxb.xuerongbao.widget.InputTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_input_layout"
            android:layout_marginBottom="@dimen/default_gap_20"
            android:layout_marginLeft="@dimen/default_gap_20"
            android:layout_marginRight="@dimen/default_gap_20"
            android:layout_marginTop="@dimen/default_gap_10"
            app:edit_hint="@string/bind_bank_name_hint"
            app:label_text="@string/bind_bank_name"
            app:not_null="true"
            app:post_key="@string/bind_bank_name_post_key" />

        <Button
            android:id="@+id/bind_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_20"
            android:background="@drawable/common_button_bg"
            android:enabled="false"
            android:onClick="@{handler.onBindClick}"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big" />


    </LinearLayout>
</layout>