<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.wazxb.xuerongbao.moudles.account.ChangePasswordActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/view_default_bg"
        android:orientation="vertical">

        <com.zxzx74147.devlib.widget.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gap_110"
            app:text="@string/change_password" />


        <com.wazxb.xuerongbao.widget.InputTextView
            android:id="@+id/old_password_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_input_layout"
            android:layout_marginLeft="@dimen/default_gap_20"
            android:layout_marginRight="@dimen/default_gap_20"
            android:layout_marginTop="@dimen/default_gap_20"
            android:inputType="textPassword"
            app:edit_hint="@string/password_old_hint"
            app:label_text="@string/password_old"
            app:label_width="@dimen/default_gap_180"
            app:not_null="true"
            app:post_key="@string/password_post_old_key" />

        <com.wazxb.xuerongbao.widget.InputTextView
            android:id="@+id/new_password_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_input_layout"
            android:layout_marginLeft="@dimen/default_gap_20"
            android:layout_marginRight="@dimen/default_gap_20"
            android:layout_marginTop="@dimen/default_gap_10"
            android:inputType="textPassword"
            app:edit_hint="@string/password_new_hint"
            app:label_text="@string/password_new"
            app:label_width="@dimen/default_gap_180"
            app:not_null="true"
            app:post_key="@string/password_post_new_key" />

        <com.wazxb.xuerongbao.widget.InputTextView
            android:id="@+id/new_password_2_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_input_layout"
            android:layout_marginLeft="@dimen/default_gap_20"
            android:layout_marginRight="@dimen/default_gap_20"
            android:layout_marginTop="@dimen/default_gap_10"
            android:inputType="textPassword"
            app:edit_hint="@string/password_new_2_hint"
            app:label_text="@string/password_new_2"
            app:label_width="@dimen/default_gap_180"
            app:not_null="true" />


        <Button
            android:id="@+id/change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_gap_20"
            android:layout_marginRight="@dimen/default_gap_20"
            android:layout_marginTop="@dimen/default_gap_20"
            android:background="@drawable/common_button_orange_bg"
            android:enabled="false"
            android:onClick="@{handler.onChangeClick}"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big" />
    </LinearLayout>
</layout>